# rp2350-desk-clock

./: .gitignore  .mise.toml  CMakeLists.txt  README.md  build.sh  lv_conf.h
.claude/: settings.local.json
.claude/worktrees/agent-a9920b27/src/ui/: navigation.c  time_set_screen.h
.ralph/: learnings.md  progress.md  tasks.md
docs/plans/: 2025-12-18-desk-clock-design.md  2025-12-18-desk-clock-implementation.md
lib/: lv_conf.h  lvgl
scripts/: flash.sh
sim/: CMakeLists.txt  lv_conf_sim.h  pico_stubs.h  sim_main.c  sim_stubs.c
sim/pico/: stdlib.h  time.h
src/: app.c  app.h  main.c
src/config/: display.h  settings.c  settings.h
src/hal/: display_driver.c  display_driver.h  lvgl_helpers.c  lvgl_helpers.h  pio_qspi.c  pio_qspi.h  pio_qspi.pio  rtc.c  rtc.h  rtc_driver.c  rtc_driver.h  touch_driver.c  touch_driver.h
src/ui/: analog_clock.c  analog_clock.h  clock_analog.c  clock_analog.h  clock_digital.c  clock_digital.h  navigation.c  navigation.h  settings_screen.c  settings_screen.h  sweep.c  sweep.h  theme.c  theme.h  time_set_screen.c  watch_face_style.c  watch_face_style.h
